--- a/glide.yaml
+++ b/glide.yaml
@@ -3,3 +3,5 @@ import:
 - package: github.com/labstack/echo
 - package: github.com/labstack/echo/middleware
 - package: golang.org/x/net/websocket
+- package: golang.org/x/crypto/acme/autocert
+- package: github.com/valyala/fasttemplate
